<resources>
    <string name="setting_key_desktop_setting">desktop_setting</string>
    <string name="setting_key_backup_and_restore">backup_and_restore</string>
    <string name="setting_key_desktopeffects">desktopeffects</string>
    <string name="setting_key_appeffects">appeffects</string>
    <string name="setting_key_exit">exit</string>
    <string name="setting_key_backup">backup</string>
    <string name="setting_key_restore">restore</string>
    <string name="setting_key_restart">restart</string>
    <string name="setting_key_share">share</string>
    <string name="setting_key_update">update</string>
    <string name="setting_key_feedback">feedback</string>
    <string name="setting_key_vibrator">vibrator</string>
    <string name="setting_key_installhelp">installhelp</string>
    <string name="setting_key_resetwizard">resetwizard</string>
    <string name="setting_key_circled">circled</string>
    <string name="setting_key_shake_wallpaper">shake_wallpaper</string>
    <string name="setting_key_basic_setting">setting_key_basic_setting</string>
    <string name="setting_report">http://www.coolauncher.cn/iloong/service/report</string>
    <string name="setting_onlinetheme">http://www.coolauncher.cn/zt.htm</string>
    <string name="setting_apkdownload">http://www.coolauncher.cn/iloong/service/download</string>
    <string name="server_app_url">http://w1.mumucloud.com/openAPI/DownurlHandler.ashx</string>
    <string name="other_app_url">http://w1.mumucloud.com/openAPI/packageDownurlHandler.ashx</string>
    <string name="download_response_url">http://w1.mumucloud.com/openAPI/UI_apkDownHandler.ashx</string>
    <string name="sharedUserId" />
    <string name="process" />
    <string name="app_name">SpaceWiz5.0</string>
    <string name="uid_name">Android Core Apps</string>
    <string name="folder_name">Folder</string>
    <string name="contact_name">Contacts</string>
    <string name="chooser_wallpaper">Select wallpaper from</string>
    <string name="chooser_3dwidget">Choose a 3D Widget</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="pick_wallpaper">Wallpapers</string>
    <string name="activity_not_found">Application is not installed on your phone.</string>
    <string name="configure_wallpaper">Configure...</string>
    <string name="iloong_shellstr">Launcher Loading...</string>
    <string name="circle_autoSort">AutoSort</string>
    <string name="circle_iconOverlap">Overlap</string>
    <string name="circle_iconTrans">Translation</string>
    <string name="circle_multiSelect">MultiSelect</string>
    <string name="circle_createFolder">Create Folder</string>
    <string name="circle_deleteAll">DeleteAll</string>
    <string name="circle_noticeToast">Return to the origin to select</string>
    <string name="circle_dstOverToast">Beyond the trap range limit</string>
    <string name="circle_deleteALLToast">Sure to delete all?</string>
    <string name="circle_selectMutiToOperToast">Multiple icons operation</string>
    <string name="circle_notSupportToast">This version is temporarily unable to use this feature</string>
    <string name="circle_ok_action">OK</string>
    <string name="circle_cancel_action">Cancel</string>
    <string name="circle_unselectAppIconToast">No icon selected</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename Folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="folder3D_del_toast">Sure to delete this folder?</string>
    <string name="widget_download_content">Not yet installed on your phone, click OK to download and install!</string>
    <string name="apk_cannot_found_content">Cannot found APK for this application on your SD card!</string>
    <string name="folder3D_full">Folder is full</string>
    <string name="folder3D_name">Folder</string>
    <string name="menu_item_add_item" />
    <string name="group_applications">Applications</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_folder">New folder</string>
    <string name="group_live_folders">Folder</string>
    <string name="group_widgets">Widgets</string>
    <string name="group_wallpapers">Wallpaper</string>
    <string name="group_3D_widgets">3D widgets</string>
    <string name="group_contacts">Contacts</string>
    <string name="add_folder">Folder</string>
    <string name="add_clock">Clock</string>
    <string name="add_photo_frame">Picture frame</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="shortcut_installed">Shortcut \"%s\" created.</string>
    <string name="shortcut_uninstalled">Shortcut \"%s\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"%s\" already exists.</string>
    <string name="title_select_shortcut">Select shortcut</string>
    <string name="title_select_application">Select application</string>
    <string name="title_select_live_folder">Select folder</string>
    <string name="all_apps_button_label">All applications</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an application to add shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows an application to remove shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows an application to read the settings and shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows an application to change the settings and shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="default_browser_url">http://www.google.com/m?client=ms-{CID}source=android-home-hotseat</string>
    <string name="errorHint">A error has happened %1$s.Please click <b><i>REPORT</i></b> to send the error information to us by email, Thanks!!!</string>
    <string name="hello">hello iLoong User</string>
    <string name="folder_renamed">Folder renamed to %1$s</string>
    <string name="folder_name_format">Folder: %1$s</string>
    <string name="can_not_add_widget">"Can't add to this page"</string>
    <string name="can_not_delete_page">The minimum number of screens has reached</string>
    <string name="delete_page">Page is not empty, sure to delete it?</string>
    <string name="appbar_tab_app">Apps</string>
    <string name="appbar_tab_widget">Widgets</string>
    <string name="appbar_tab_widget_ex">Widgets</string>
    <string name="appbar_tab_uninstall">Uninstall apps</string>
    <string name="appbar_tab_hide">Hide apps</string>
    <string name="sort_app_init">Sort by factory data</string>
    <string name="sort_app_name">Sort by app name</string>
    <string name="sort_app_install_time">Sort by install time</string>
    <string name="sort_app_use_frequency">Sort by frequency of use</string>
    <string name="sort_dialog_title">Sort Icons</string>
    <string name="widget_empty_dialog">This 3D widget is not installed，please install and then add it</string>
    <string name="widget_empty_title">3D widget</string>
    <string name="hotseat_mainmenu">Apps</string>
    <string name="hotseat_workspace">Home</string>
    <string name="main_menu">Apps</string>
    <string name="trash_icon_title">Delete</string>
    <string name="fold_name_too_long">Folder name exceeds the maximum length</string>
    <string name="app_downloading">Downloading</string>
    <string name="effect_standard">Standard</string>
    <string name="effect_random">Random</string>
    <string name="effect_cascade">Stack</string>
    <string name="effect_outbox">Outer Box</string>
    <string name="effect_inbox">Inner Box</string>
    <string name="effect_flip">Flip</string>
    <string name="effect_bigfan">Cross Flip</string>
    <string name="effect_fan">Windmill</string>
    <string name="effect_wave">Wave</string>
    <string name="effect_ball">Ball</string>
    <string name="effect_wheel">Wheel</string>
    <string name="effect_cylinder">Cylinder</string>
    <string name="effect_default">Default</string>
    <string name="uninstall_app">Uninstall</string>
    <string name="uninstall_app_ex">Uninstall</string>
    <string name="download_apps">Downloaded applications</string>
    <string name="hide_icon">Hide icon</string>
    <string name="sort_icon">Sort icon</string>
    <string name="no_space_add_icon">No space to add</string>
    <string name="exceed_num_add_icon">Selected icon number exceeds the maximum available space, add fail!</string>
    <string name="contact_error_pls_check">Add contact failed, please check the contact information is complete</string>
    <string name="download_to_install">This widget has not been installed, please download it</string>
    <string name="add_failure">Add failed</string>
    <string name="deny_add_on_mainmenu">This is the main menu entry</string>
    <string name="dlmng_check_network">Unable to get the download information, please check the network and try again!</string>
    <string name="dlmng_comeout_soon">Coming soon</string>
    <string name="dlmng_pls_insert_SD">Please insert the SD card, and then download!</string>
    <string name="backup_pls_insert_SD">Please insert the SD card, and then backup!</string>
    <string name="dlmng_network_error">Network error, please try again later!</string>
    <string name="dlmng_download_error">Connect error, please try again later!</string>
    <string name="dlmng_download_configwrong">Download wrong parameter</string>
    <string name="backup_title_back">CooeeHomeS3 Backup</string>
    <string name="backup_back_to_SD">Backup the CooeeHomeS3 settings to SD card!</string>
    <string name="backup_title_restore">CooeeHomeS3 setting restore</string>
    <string name="backup_restore">Restore setting, the launcher will restart!</string>
    <string name="backup_latest">Last backup time</string>
    <string name="backup_no_back">The launcher has no backup</string>
    <string name="backup_success">Backup success！</string>
    <string name="backup_fail">Backup fail！</string>
    <string name="restore_fail">Restore Fail！</string>
    <string name="guide_title">User guide</string>
    <string name="guide_proceed">Show user guide, application will be restarted</string>
    <string name="lock_editor_title">Lock edit</string>
    <string name="lock_editor">Note: Open the edit lock, screen dragging will no longer responding, click the button again will unlock edit.</string>
    <string name="warning_msg">Warning message</string>
    <string name="version_msg_title">Version message</string>
    <string name="version_msg">Your software is up to date!</string>
    <string name="common_commit">Commit</string>
    <string name="setting_feedback">Please submit your feedback;</string>
    <string name="desktop_setting">Desktop setting</string>
    <string name="basic_setting">Basic Settings</string>
    <string name="vibrator">Vibrator</string>
    <string name="vibrate_on_long_click">Long click vibrate</string>
    <string name="effect_setting">Effect setting</string>
    <string name="shake_wallpaper">Shake wallpapers</string>
    <string name="shake_wallpaper_description">shake to change wallpapers</string>
    <string name="desktop_slide">Desktop slide</string>
    <string name="app_list_slide">Applist slide</string>
    <string name="backup_and_restore">Backup and restore</string>
    <string name="backup_desktop">Backup desktop</string>
    <string name="restore_desktop">Restore desktop</string>
</resources>