<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/desktop_setting" android:key="@string/setting_key_desktop_setting"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:setting="http://schemas.android.com/apk/res/com.cooee.launcherS3">
    <PreferenceCategory android:title="@string/basic_setting" android:key="@string/setting_key_basic_setting">
        <CheckBoxPreference android:title="@string/vibrator" android:key="@string/setting_key_vibrator" android:summary="@string/vibrate_on_long_click" />
        <CheckBoxPreference android:title="@string/shake_wallpaper" android:key="@string/setting_key_shake_wallpaper" android:summary="@string/shake_wallpaper_description" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/effect_setting">
        <ListPreference android:entries="@array/workspace_effects_list_preference" android:title="@string/desktop_slide" android:key="@string/setting_key_desktopeffects" android:entryValues="@array/workspace_effectsvalue_list_preference" />
        <ListPreference android:entries="@array/app_effects_list_preference" android:title="@string/app_list_slide" android:key="@string/setting_key_appeffects" android:entryValues="@array/app_effectsvalue_list_preference" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/backup_and_restore" android:key="@string/setting_key_backup_and_restore">
        <Preference android:title="@string/backup_desktop" android:key="@string/setting_key_backup" />
        <Preference android:title="@string/restore_desktop" android:key="@string/setting_key_restore" />
    </PreferenceCategory>
</PreferenceScreen>