<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RadioGroup android:orientation="vertical" android:id="@id/radioGroup" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RadioButton android:textSize="16.0sp" android:id="@id/radioFactory" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sort_app_init" />
        <RadioButton android:textSize="16.0sp" android:id="@id/radioInstall" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sort_app_install_time" />
        <RadioButton android:textSize="16.0sp" android:id="@id/radioName" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sort_app_name" />
        <RadioButton android:textSize="16.0sp" android:id="@id/radioFrequency" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sort_app_use_frequency" />
    </RadioGroup>
</LinearLayout>