<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/txtfeedbackHint" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/setting_feedback" />
    <EditText android:textSize="20.0sp" android:gravity="left" android:id="@id/editfeedbackContent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="200" android:editable="true" android:layout_weight="1.0" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="#fffafafa" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/btnfeedbackok" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/common_commit" android:layout_weight="1.0" />
        <Button android:id="@id/btnfeedbackcancel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/circle_cancel_action" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>